<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_stocks">没有添加任何股票</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="add">添加</string>    
    <string name="enter_symbols">添加股票代码</string>    
    <string name="close">Close</string>    
    <string name="ok">OK</string>    
    <string name="delete">删除</string>  
    <string name="back">返回</string>
    <string name="auto_refresh">自动刷新</string>
    <string name="auto_refresh_summary">开启自动刷新功能</string>
    <string name="auto_refresh_freq">自动刷新频率</string>
    <string name="auto_refresh_freq_summary">设置自动刷新频率</string>
    <string name="settings">设置</string>
    <string name="settings_summary">自动刷新设置</string>
    <string name="menu_preferences">设置</string>
    <string name="focus">关注</string>
</resources>
